--- a/src/partials/footer-modal.html
+++ b/src/partials/footer-modal.html
@@ -64,7 +64,7 @@
         <img
           class="footer-modal-img"
           alt="Lesha"
-          src="/src/img/team-13/humanjpg.jpg"
+          src="/src/img/team-13/Aleksey.jpg"
         />
         <div class="grid-box">
           <p class="grid-text">
@@ -77,7 +77,7 @@
         <img
           class="footer-modal-img"
           alt="Tatiana"
-          src="/src/img/team-13/chelovechek-dev.png"
+          src="/src/img/team-13/Tania .jpg"
         />
         <div class="grid-box">
           <p class="grid-text">
