--- a/src/sass/_myLibraryPage.scss
+++ b/src/sass/_myLibraryPage.scss
@@ -33,7 +33,7 @@
   height: 200px;
   overflow: visible;
 
-  background: url(../images/chooseLibrary.jpeg) no-repeat center center;
+  background: url(../img/chooseLibrary.jpeg) no-repeat center center;
 
   background-size: contain;
   @media screen and (min-width: $mobile) {
