--- a/src/js/templates/modalWindow.hbs
+++ b/src/js/templates/modalWindow.hbs
@@ -35,11 +35,13 @@
 
     <h3 class="modal__about">About</h3>
     <div class='modal__description'>{{overview}}</div>
-
+    <div class="modal-trailer" id="player"></div>
     <div class='modal__buttons'>
-      <button class='modal__watchedButton watched' id="watched">Add to watched</button>
-      <button class='modal__queueButton queue' id="queue">Add to queue</button>
-      <button class='modal__trailerButton watch-trailer tr-home'>Watch trailer</button>
+      <div class="modal__buttons-trailers"></div>
+      <div class="modal__buttons-add">
+       <button class='modal__watchedButton watched' id="watched">Add to watched</button>
+       <button class='modal__queueButton queue' id="queue">Add to queue</button>
+      </div>
     </div>
   </div>
 </div>
