--- a/src/sass/_footer-modal.scss
+++ b/src/sass/_footer-modal.scss
@@ -45,11 +45,11 @@ ul {
   font-weight: 500;
   background-color: #ffffff;
   transform: translate(-50%, -50%);
-  // box-shadow: (0px 8px 43px rgba(0, 0, 0, 0.56));
+  box-shadow: (0px 8px 43px rgba(0, 0, 0, 0.56));
   border-radius: 10px;
   overflow: auto;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 1), -23px 0 20px -23px rgba(0, 0, 0, 0.8),
-    23px 0 20px -23px rgba(0, 0, 0, 0.8), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  // box-shadow: 0 1px 4px rgba(0, 0, 0, 1), -23px 0 20px -23px rgba(0, 0, 0, 0.8),
+  //   23px 0 20px -23px rgba(0, 0, 0, 0.8), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 
   @media screen and (min-width: $tablet) {
     width: 610px;
